demos/asm-mcp-multi-clusters/terraform/lab_materials/istio-system/peerauthentication-mtls-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
