demos/asm-mcp-multi-clusters/terraform/lab_materials/istio-system/default-deny-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istio-system
spec:
  {}
